--- a/css/styleLanding.css
+++ b/css/styleLanding.css
@@ -6,6 +6,7 @@ Cores base:
   Sugestão de cinza: #D9D9D9 , #999999, #737373
 */
 /* Reset Geral*/
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 *,
 *::before,
 *::after {
@@ -58,6 +59,7 @@ body {
 a {
   color: #5E2751;
   transition: all .9s ease;
+  text-decoration: none;
 }
 
 a:visited,
@@ -117,19 +119,20 @@ h6 {
 }
 .work .text {
   padding: .1rem 1.1rem !important;
-  -webkit-background: var(--hex257C);
-  -moz-background: var(--hex257C);
-  background: var(--hex257C);
+  -webkit-background: var(--cinza-base-claro);
+  -moz-background: var(--cinza-base-claro);
+  background: var(--cinza-base-claro);
+  border: var(--cinza-base-escuro) sollid 1px;
   width: auto!important;
   height: fit-content!important;
   margin-left: .7rem!important;
   margin-top: .7rem !important;
   -webkit-border-top-right-radius: 20%;
-  -webkit-border-bottom-left-radius: 20%;
+  -webkit-border-bottom-left-radius: 15px;
   -moz-border-top-right-radius: 20%;
-  -moz-border-bottom-left-radius: 20%;
+  -moz-border-bottom-left-radius: 15px;
   border-top-right-radius: 20%;
-  border-bottom-left-radius: 20%;
+  border-bottom-left-radius: 15px;
   -webkit-box-shadow: 0 .5rem .9rem .2rem rgba(82, 49, 120, 0.9);
   -moz-box-shadow: 0 .5rem .9rem .2rem rgba(82, 49, 120, 0.9);
   box-shadow: 0 .5rem .9rem .2rem rgba(82, 49, 120, 0.9);
@@ -274,7 +277,7 @@ h6 {
 
 
 
-#topbar .contact-info .fa-phone {
+#topbar .contact-info .bi-telephone-fill {
   padding-left: .73rem;
   margin-left: .5rem;
   border-left: 1px solid var(--hex7680C);
@@ -340,14 +343,16 @@ h6 {
   text-shadow: .1rem .1rem .2rem rgba(0,0,0,.5);
 }
 .btn-primary {
-  background-color: var(--hex2453C) !important;
+  background-color: var(--cinza-base-claro) !important;
+  color: var(--hex7680C);
   margin-left: .9rem;
   font-size: 15px;
   letter-spacing: 1px;
   display: inline-block;
   padding: 10px 20px;
-  transition: all 0.5s ease-in-out;
+  transition: all .5s ease-in-out;
   margin: 10px;
+  border: var(--cinza-base-escuro) solid 1px;
   border-radius: 5px 0 5px;
   
 }
@@ -358,9 +363,8 @@ h6 {
 }
 
 .btn-primary:hover {
-  background: var(--hex7680C);
-  color: var(--hex7652C) !important;
-  border: var(--hex7680C);
+  color: var(--hex7680C);
+  border: var(--hex7680C) solid 1px!important;
   border-radius: 15px 15px 5% 5%;
   box-shadow: .1rem .1rem .2rem rgba(0,0,0,.5);
 }
