--- a/lojas/css/styleAKv1.css
+++ b/lojas/css/styleAKv1.css
@@ -547,7 +547,7 @@ h6 {
   -webkit-box-shadow: 0 .3rem .3rem rgba(82, 49, 120, .4);
   -moz-box-shadow: 0 .3rem .3rem rgba(82, 49, 120, .4);
   box-shadow: 0 .3rem .3rem rgba(82, 49, 120, .4);
-  background: none;
+  background: var(--cinza-base-claro);
   font-size: 24px;
   display: none;
   transition: all 0.5s ease;
